# SPDM_Requester

./: README.md
SPDM requester/: CLAUDE.md  SKILLS.md  pyproject.toml
SPDM requester/Spec/: DSP0274_1.2.1.txt  DSP0274_1.2.3.txt  DSP0274_1.3.2.txt  DSP0274_1.4.0.txt
SPDM requester/c_layer/: CMakeLists.txt
SPDM requester/c_layer/include/: transport.h
SPDM requester/c_layer/src/transport/: doe_transport.c
SPDM requester/spdm_tool/: __init__.py  requester.py
SPDM requester/spdm_tool/cli/: main.py
SPDM requester/spdm_tool/messages/: __init__.py  algorithms.py  base.py  capabilities.py  certificate.py  challenge.py  digests.py  end_session.py  error.py  finish.py  key_exchange.py  measurements.py  version.py
SPDM requester/spdm_tool/transport/: __init__.py  doe.py  mock.py
SPDM requester/tests/integration/: test_state_machine.py
SPDM requester/tests/unit/: test_messages.py
